--- a/movie-service-dev.yml
+++ b/movie-service-dev.yml
@@ -1,11 +1,7 @@
 server:
-  port: 8083
+  port: 8082
 
 spring:
-  eureka:
-    client:
-      service-url:
-        defaultZone: http://localhost:8761/eureka
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;
@@ -18,3 +14,9 @@ spring:
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: create-drop
+
+info:
+  app:
+    name: movie-service
+    description: Movie Service created
+    version: 1.0.0
