--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -1,28 +1,19 @@
 server:
   port: 8080
-  
+
 spring:
   cloud:
     gateway:
-      default-filters:
-        - name: InfoFilter
       routes:
-        - id: movieRoute 
-          uri: lb://movie-service 
-          predicates: 
+        - id: movieRoute #Identificando la ruta del service de producto
+          uri: http://localhost:8082/ #URL donde se hará el redirect segun el predicate definido
+          predicates: #Reglas de análisis de una request
             - Path=/movies/**
-        - id: catalogRoute 
-          uri: lb://catalog-service 
-          predicates: 
+        - id: catalogRoute #Identificando la ruta del service de producto
+          uri: http://localhost:8084/ #URL donde se hará el redirect segun el predicate definido
+          predicates: #RReglas de análisis de una request
             - Path=/catalogs/**
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,gateway
-info:
-  app:
-    name: gateway-service
-    description: Gateway Service created 
-    version: 1.0.0
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
